<?xml version="1.0"?>
<package>
  <name>opencv</name>
  <version>4.7.0</version>
  <description>OpenCV 4.7</description>

  <maintainer email="wirth@relayrobotics.com">Stephan Wirth</maintainer>
  <license>Relay Robotics Internal</license>

  <url type="website">http://opencv.org</url>
  <url type="bugtracker">https://github.com/opencv/opencv/issues</url>
  <url type="repository">https://github.com/opencv/opencv</url>

  <author>The OpenCV team</author>

  <build_depend>ffmpeg</build_depend>
  <build_depend>libjpeg</build_depend>
  <build_depend>libpng-dev</build_depend>
  <build_depend>libtiff-dev</build_depend>
  <build_depend>libv4l-dev</build_depend>
  <build_depend>libvtk-qt</build_depend>
  <build_depend>libwebp-dev</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>python3</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>zlib</build_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <run_depend>catkin</run_depend>
  <run_depend>ffmpeg</run_depend>
  <run_depend>libjpeg</run_depend>
  <run_depend>libpng-dev</run_depend>
  <run_depend>libvtk-qt</run_depend>
  <run_depend>libwebp-dev</run_depend>
  <run_depend>protobuf</run_depend>
  <run_depend>python3</run_depend>
  <run_depend>python3-numpy</run_depend>
  <run_depend>zlib</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
